<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp"
    android:gravity="center">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="goToMyTextViewActivity"
        android:text="@string/my_text_view"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="goToMyImageViewActivity"
        android:text="@string/my_image_view"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="goToMyEditTextActivity"
        android:text="@string/my_edit_text"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="goToMyAutoCompleteTextViewActivity"
        android:text="@string/label_auto_complete_text_view"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="goToMyButtonActivity"
        android:text="@string/my_button"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="goToMyImageButtonActivity"
        android:text="@string/my_image_button"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="goToMyCheckBoxActivity"
        android:text="@string/my_check_box"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="goToMyToggleButtonActivity"
        android:text="@string/my_toggle_button"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="goToMyRadioButtonActivity"
        android:text="@string/my_radio_button"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="goToMyRadioButtonGroupActivity"
        android:text="@string/my_radio_button_group"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="goToMyProgressBarActivity"
        android:text="@string/my_progressbar"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="goToMySpinnerActivity"
        android:text="@string/my_spinner"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="goToMyTimePickerActivity"
        android:text="@string/my_time_picker"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="goToMyDatePickerActivity"
        android:text="@string/my_date_picker"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="goToMyDateAndTimeActivity"
        android:text="@string/my_date_and_time_dialog"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="goToMyTextViewActivity"
        android:text="@string/my_text_view"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="goToMyTextViewActivity"
        android:text="@string/my_text_view"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="goToMyTextViewActivity"
        android:text="@string/my_text_view"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="goToMyTextViewActivity"
        android:text="@string/my_text_view"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="goToMyTextViewActivity"
        android:text="@string/my_text_view"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="goToMyTextViewActivity"
        android:text="@string/my_text_view"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="goToMyTextViewActivity"
        android:text="@string/my_text_view"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="goToMyTextViewActivity"
        android:text="@string/my_text_view"/>

</LinearLayout>