<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DateAndTimeDialogActivity"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/text_view_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/date_format"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_set_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_date"/>

    <TextView
        android:id="@+id/text_view_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/time_format"
        android:textSize="20sp" />
    <Button
        android:id="@+id/button_set_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_time"/>

    <TextView
        android:id="@+id/text_view_date_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/date_time_format"
        android:textSize="20sp" />

</LinearLayout>